--- a/spacerace.htm
+++ b/spacerace.htm
@@ -19,13 +19,13 @@
 
                 <div class="goLight"><a id="startButton" onclick="GameStarted()" class="lightButton"></a></div>
 
-                <div id="ship1" class="ship"><img src="srimages/Ship4speed.png" style="width: 100px; height: 100px; margin-top: 200px;" /></div>
+                <div id="ship1" class="ship"><img id="ship4img" class="transition" src="srimages/Ship4.png" style="width: 100px; height: 100px; margin-top: 200px;" /></div>
 
-                <div id="ship2" class="ship"><img src="srimages/Ship2speed.png" style="width: 100px; height: 100px; margin-top: 350px;" /></div>
+                <div id="ship2" class="ship"><img id="ship2img" class="transition" src="srimages/Ship2.png" style="width: 100px; height: 100px; margin-top: 350px;" /></div>
 
-                <div id="ship3" class="ship"><img src="srimages/Ship3speed.png" style="width: 100px; height: 100px; margin-top: 500px;" /></div>
+                <div id="ship3" class="ship"><img id="ship3img" class="transition" src="srimages/Ship3.png" style="width: 100px; height: 100px; margin-top: 500px;" /></div>
 
-                <div id="ship4" class="ship"><img src="srimages/Ship1speed.png" style="width: 100px; height: 100px; margin-top: 650px;" /></div>
+                <div id="ship4" class="ship"><img id="ship1img" class="transition" src="srimages/Ship1.png" style="width: 100px; height: 100px; margin-top: 650px;" /></div>
 
             </div>
         </div>
