--- a/spacerace.htm
+++ b/spacerace.htm
@@ -8,9 +8,9 @@
     <meta name="description" content="HTML5 Template">   
 </head>
 <body onload="DynamicSizes()">
-    <div class="overlay">
-        <div class="overlay2">
-            <div class="overlay3">
+    <div class="overlay" id="over1">
+        <div class="overlay2" id="over2">
+            <div class="overlay3" id="over3">
                 <div class="title ">
                     The Great Space Race
                 </div>
