--- a/spacerace.htm
+++ b/spacerace.htm
@@ -15,7 +15,7 @@
                     The Great Space Race
                 </div>
                 <div class="transition">
-                    <a onclick="Reset()" id="message" class="message">Click the red light to begin!</a>
+                    <a onclick="Reset()" id="message" class="message">Click the red light to begin</a>
 
                     <div class="goLight"><a id="startButton" onclick="GameStarted()" class="lightButton"></a></div>
 
