--- a/spacerace.htm
+++ b/spacerace.htm
@@ -20,9 +20,9 @@
     <div id="ship3" class="ship"><img id="ship3img" class="shipImg" src="srimages/Ship3.png" style="width: 100px; height: 100px; " /></div>
     <div id="ship4" class="ship"><img id="ship1img" class="shipImg" src="srimages/Ship1.png" style="width: 100px; height: 100px; " /></div>
 
-    <div class="overlay" style="z-index:-3; background-image:url(srimages/Stars.png)">
-       <div class="overlay" style="z-index:-2; background-image:url(srimages/Stars2.png)">
-            <div class="overlay" style="z-index:-1; background-image:url(srimages/Stars3.png)"></div>
+    <div class="overlay" id="background1" style="z-index:-3; background-image:url(srimages/Stars.png)">
+       <div class="overlay" id="background2" style="z-index:-2; background-image:url(srimages/Stars2.png)">
+            <div class="overlay" id="background3" style="z-index:-1; background-image:url(srimages/Stars3.png)"></div>
        </div>
     </div>
 
